# neuromeka-package

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/neuromeka_cpp/: indydcp3.cpp  indydcp3.h
cpp/neuromeka_cpp/proto/: common_msgs.grpc.pb.cc  common_msgs.grpc.pb.h  common_msgs.pb.cc  common_msgs.pb.h  config.grpc.pb.h  config.pb.cc  config.pb.h  config_msgs.grpc.pb.cc  config_msgs.grpc.pb.h  config_msgs.pb.cc  config_msgs.pb.h  control.grpc.pb.cc  control.grpc.pb.h  control.pb.cc  control.pb.h  control_msgs.grpc.pb.cc  control_msgs.grpc.pb.h  control_msgs.pb.cc  control_msgs.pb.h  cri.grpc.pb.cc  cri.grpc.pb.h  cri.pb.cc  cri.pb.h  device.grpc.pb.cc  device.grpc.pb.h  device.pb.cc  device_msgs.grpc.pb.cc  device_msgs.grpc.pb.h  device_msgs.pb.cc  device_msgs.pb.h  ethercat.grpc.pb.cc  ethercat.grpc.pb.h  ethercat.pb.cc  ethercat.pb.h  ethercat_msgs.grpc.pb.h  ethercat_msgs.pb.cc  ethercat_msgs.pb.h  eyetask.grpc.pb.cc  eyetask.grpc.pb.h  eyetask.pb.h  (+24 more)
cpp/src/: build_proto.cpp  example_indydcp3 copy.cpp  example_indydcp3.cpp  example_indydcp3_new.cpp
proto/: common_msgs.proto  config.proto  config_msgs.proto  control.proto  control_msgs.proto  cri.proto  device.proto  device_msgs.proto  ethercat.proto  ethercat_msgs.proto  hri.proto  hri_msgs.proto  indyeye.proto  moby.proto  moby_msgs.proto  rtde.proto  rtde_msgs.proto  shared_msgs.proto
proto/cpp_generated/: common_msgs.grpc.pb.h  common_msgs.pb.cc  common_msgs.pb.h  config.grpc.pb.cc  config.grpc.pb.h  config.pb.cc  config.pb.h  config_msgs.grpc.pb.cc  config_msgs.pb.cc  config_msgs.pb.h  control.grpc.pb.cc  control.grpc.pb.h  control.pb.cc  control_msgs.grpc.pb.h  control_msgs.pb.cc  control_msgs.pb.h  cri.grpc.pb.cc  cri.pb.cc  cri.pb.h  device.grpc.pb.cc  device.grpc.pb.h  device.pb.cc  device.pb.h  device_msgs.grpc.pb.cc  device_msgs.pb.cc  device_msgs.pb.h  ethercat.grpc.pb.cc  ethercat.grpc.pb.h  ethercat.pb.cc  ethercat_msgs.grpc.pb.cc  ethercat_msgs.grpc.pb.h  ethercat_msgs.pb.cc  ethercat_msgs.pb.h  eyetask.grpc.pb.cc  eyetask.pb.cc  eyetask.pb.h  hri.pb.h  hri_msgs.grpc.pb.cc  hri_msgs.pb.h  indyeye.grpc.pb.h  (+16 more)
proto/python_generated/: ethercat_pb2.py
python/: build_proto.py  setup.py
python/examples/: ethercat_example.ipynb  indydcp2_examples.ipynb  indydcp3_example.ipynb  indyeye_example.ipynb  performance_benchmark_example.ipynb  plot_record_example.ipynb  test_notebook_ecat.ipynb  test_notebook_moby.ipynb
python/examples/.ipynb_checkpoints/: ethercat_example-checkpoint.ipynb  indydcp3_example-checkpoint.ipynb  indyeye_example-checkpoint.ipynb  plot_record_example-checkpoint.ipynb  test_notebook_moby-checkpoint.ipynb
python/neuromeka/: __init__.py  ecat.py  enums.py  eye.py  indydcp2.py  indydcp3.py  moby.py  performancebenchmark.py
python/neuromeka.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/neuromeka/proto/: __init__.py  ethercat_pb2.py
python/neuromeka/proto_step/: __init__.py  ethercat_pb2_grpc.py
